When in dark mode, fix print style for header.

--- a/app/assets/src/application/css/_layout.scss
+++ b/app/assets/src/application/css/_layout.scss
@@ -79,6 +79,12 @@ header {
       * {
         fill: $light;
       }
+
+      @media print {
+        * {
+          fill: $upb-blue;
+        }
+      }
     }
   }
 }
